[package]
name = "backtesting-framework"
version = "0.1.0-alpha.1"
authors = ["Max Gilmour <mgilmour@maxgmr.ca"]
edition = "2024"
description = "Simple framework for testing quantitative trading strategies"
readme = "README.md"
homepage = "https://github.com/maxgmr/backtesting-framework"
repository = "https://github.com/maxgmr/backtesting-framework"
license = "AGPL-3.0"

[features]
yahoo = ["dep:yahoo_finance_api"]

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["serde"] }
yahoo_finance_api = { version = "4.1", optional = true }

[dev-dependencies]
tokio = { version = "1.50", features = ["rt", "macros", "test-util"] }
