[package]
name = "backtesting-framework"
version = "0.1.0-alpha.1"
authors = ["Max Gilmour <mgilmour@maxgmr.ca"]
edition = "2024"
description = "Simple framework for testing quantitative trading strategies"
readme = "README.md"
homepage = "https://github.com/maxgmr/backtesting-framework"
repository = "https://github.com/maxgmr/backtesting-framework"
license = "AGPL-3.0"

[features]
plotting = ["dep:chrono", "dep:plotters", "dep:thiserror"]
yahoo = ["dep:yahoo_finance_api"]

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
chrono = { version = "0.4", optional = true }
plotters = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "2.0", optional = true }
time = { version = "0.3", features = ["serde"] }
yahoo_finance_api = { version = "4.1", optional = true }

[dev-dependencies]
tokio = { version = "1.50", features = ["rt", "macros", "test-util"] }
